# glin-chain

./: .gitignore  CONTRIBUTING.md  Cargo.lock.backup  Cargo.toml  Dockerfile  HOW_TO_USE.md  LICENSE  MIGRATION_LOG.md  RAILWAY_DEPLOYMENT.md  README.md  RESOURCE_OPTIMIZATION.md  TESTNET_GUIDE.md  build.sh  explorer-template.md  purge-chain.sh  railway.toml  run-dev.sh
.github/workflows/: ci.yml
chain-specs/: glin-testnet-raw.json  glin-testnet.json
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/provider-staking/: Cargo.toml
pallets/provider-staking/src/: lib.rs
pallets/reward-distribution/: Cargo.toml
pallets/reward-distribution/src/: lib.rs
pallets/task-registry/: Cargo.toml
pallets/task-registry/src/: lib.rs
pallets/testnet-points/: Cargo.toml
pallets/testnet-points/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
scripts/: build-chain-spec.sh  db_maintenance.sh  generate_validator_keys.sh  insert_session_keys.sh  start_rpc.sh  start_validator.sh
