[workspace]
members = [
    "node",
    "runtime",
    "pallets/task-registry",
    "pallets/provider-staking",
    "pallets/reward-distribution",
    "pallets/validation-zkp",
    "pallets/reputation",
]
resolver = "2"

[workspace.package]
authors = ["GLIN Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/glin/glin-chain"
version = "0.1.0"

[workspace.dependencies]
# Substrate dependencies
codec = { package = "parity-scale-codec", version = "3.6", default-features = false }
scale-info = { version = "2.10", default-features = false }
log = { version = "0.4", default-features = false }

# Substrate FRAME
frame-support = { version = "28.0.0", default-features = false }
frame-system = { version = "28.0.0", default-features = false }
frame-executive = { version = "28.0.0", default-features = false }
frame-benchmarking = { version = "28.0.0", default-features = false, optional = true }

# Substrate Pallets
pallet-balances = { version = "28.0.0", default-features = false }
pallet-transaction-payment = { version = "28.0.0", default-features = false }
pallet-timestamp = { version = "27.0.0", default-features = false }
pallet-sudo = { version = "28.0.0", default-features = false }
pallet-aura = { version = "27.0.0", default-features = false }
pallet-grandpa = { version = "28.0.0", default-features = false }

# Substrate Primitives
sp-core = { version = "28.0.0", default-features = false }
sp-runtime = { version = "31.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-io = { version = "30.0.0", default-features = false }
sp-api = { version = "26.0.0", default-features = false }
sp-blockchain = { version = "28.0.0", default-features = false }
sp-block-builder = { version = "26.0.0", default-features = false }
sp-consensus-aura = { version = "0.32.0", default-features = false }
sp-consensus-grandpa = { version = "13.0.0", default-features = false }

[profile.release]
panic = "unwind"