[workspace]
members = [
    "node",
    "runtime",
    "pallets/task-registry",
    "pallets/provider-staking",
    "pallets/reward-distribution",
]
resolver = "2"

[workspace.package]
authors = ["GLIN Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/glin/glin-chain"
version = "0.1.0"

[workspace.dependencies]
# Core encoding/decoding (keep these separate as they're universal)
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
log = { version = "0.4.22", default-features = false }

# Polkadot SDK umbrella - includes all pallets, FRAME, sc-* node components, sp-* primitives
polkadot-sdk = { version = "2507.2.0", default-features = false }

# Individual FRAME crates for custom pallets (pulled from same version as polkadot-sdk uses)
frame-support = { version = "42.0.0", default-features = false }
frame-system = { version = "42.0.0", default-features = false }
frame-benchmarking = { version = "42.0.0", default-features = false }
sp-runtime = { version = "43.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-io = { version = "43.0.0", default-features = false }
pallet-balances = { version = "43.0.1", default-features = false }

[profile.release]
panic = "unwind"