[package]
name = "glin-node"
version = "0.1.0"
authors = ["GLIN Team"]
edition = "2021"
license = "Apache-2.0"
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "glin-node"

[dependencies]
# CLI and utilities
clap = { version = "4.4", features = ["derive"] }
futures = { version = "0.3", features = ["thread-pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpsee = { version = "0.24", features = ["server"] }
hex = "0.4"

# Polkadot SDK - includes all substrate client (sc-*) and primitives (sp-*)
polkadot-sdk = { workspace = true, features = [
    # Substrate client components
    "sc-cli",
    "sc-executor",
    "sc-executor-wasmtime",
    "sc-service",
    "sc-network",
    "sc-transaction-pool",
    "sc-transaction-pool-api",
    "sc-consensus",
    "sc-consensus-aura",
    "sc-consensus-grandpa",
    "sc-client-api",
    "sc-rpc",
    "sc-rpc-api",
    "sc-basic-authorship",
    "sc-offchain",
    "sc-network-sync",
    "sc-telemetry",
    # Substrate primitives
    "sp-core",
    "sp-runtime",
    "sp-timestamp",
    "sp-inherents",
    "sp-keyring",
    "sp-api",
    "sp-blockchain",
    "sp-block-builder",
    "sp-consensus-aura",
    "sp-consensus-grandpa",
    "sp-consensus",
    "sp-io",
    # Frame components
    "frame-system",
    "frame-benchmarking",
    "frame-benchmarking-cli",
    "pallet-transaction-payment",
    "pallet-transaction-payment-rpc",
    # RPC
    "substrate-frame-rpc-system",
] }

# Local runtime
glin-runtime = { path = "../runtime" }

# CLI-specific dependencies (try-runtime feature)
# Note: try-runtime-cli is included in polkadot-sdk, enable with feature flag

[build-dependencies]
substrate-build-script-utils = { version = "11.0.0" }

[features]
default = []
runtime-benchmarks = [
    "glin-runtime/runtime-benchmarks",
    "polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
    "glin-runtime/try-runtime",
    "polkadot-sdk/try-runtime",
]