[package]
name = "glin-runtime"
version = "0.1.0"
authors = ["GLIN Team"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true, features = ["serde"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Substrate FRAME
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-try-runtime = { version = "0.44.0", default-features = false, optional = true }

# Substrate Pallets
pallet-aura = { workspace = true }
pallet-balances = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { version = "38.0.0", default-features = false }

# Substrate Primitives
frame-system-rpc-runtime-api = { version = "34.0.0", default-features = false }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true, features = ["serde"] }
sp-consensus-grandpa = { workspace = true, features = ["serde"] }
sp-core = { workspace = true, features = ["serde"] }
sp-inherents = { version = "34.0.0", default-features = false }
sp-offchain = { version = "34.0.0", default-features = false }
sp-runtime = { workspace = true, features = ["serde"] }
sp-session = { version = "36.0.0", default-features = false }
sp-std = { workspace = true }
sp-storage = { version = "21.0.0", default-features = false }
sp-transaction-pool = { version = "34.0.0", default-features = false }
sp-version = { version = "37.0.0", default-features = false, features = ["serde"] }
sp-genesis-builder = { version = "0.15.1", default-features = false }

# Local pallets
pallet-task-registry = { path = "../pallets/task-registry", default-features = false }
pallet-provider-staking = { path = "../pallets/provider-staking", default-features = false }
pallet-reward-distribution = { path = "../pallets/reward-distribution", default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { version = "38.0.0", default-features = false, optional = true }

[build-dependencies]
substrate-wasm-builder = { version = "24.0.1", optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-try-runtime?/std",
    "frame-benchmarking?/std",
    "frame-system-benchmarking?/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-task-registry/std",
    "pallet-provider-staking/std",
    "pallet-reward-distribution/std",
    "scale-info/std",
    "serde_json/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-consensus-grandpa/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-storage/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "sp-genesis-builder/std",
    "substrate-wasm-builder",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-executive/try-runtime",
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "frame-try-runtime/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-task-registry/try-runtime",
    "pallet-provider-staking/try-runtime",
    "pallet-reward-distribution/try-runtime",
    "sp-runtime/try-runtime",
]