[package]
name = "glin-runtime"
version = "0.1.0"
authors = ["GLIN Team"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true, features = ["serde"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Polkadot SDK - includes all FRAME, pallets, and primitives
polkadot-sdk = { workspace = true, features = [
    # Core FRAME
    "frame-executive",
    "frame-support",
    "frame-system",
    "frame-try-runtime",
    # Pallets
    "pallet-aura",
    "pallet-balances",
    "pallet-contracts",
    "pallet-grandpa",
    "pallet-insecure-randomness-collective-flip",
    "pallet-sudo",
    "pallet-timestamp",
    "pallet-transaction-payment",
    # Primitives
    "sp-api",
    "sp-block-builder",
    "sp-consensus-aura",
    "sp-consensus-grandpa",
    "sp-core",
    "sp-genesis-builder",
    "sp-inherents",
    "sp-offchain",
    "sp-runtime",
    "sp-session",
    "sp-std",
    "sp-storage",
    "sp-transaction-pool",
    "sp-version",
    # RPC runtime APIs
    "frame-system-rpc-runtime-api",
    "pallet-transaction-payment-rpc-runtime-api",
    # Benchmarking
    "frame-benchmarking",
    "frame-system-benchmarking",
], default-features = false }

# Local custom pallets
pallet-task-registry = { path = "../pallets/task-registry", default-features = false }
pallet-provider-staking = { path = "../pallets/provider-staking", default-features = false }
pallet-reward-distribution = { path = "../pallets/reward-distribution", default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = "24.0.1", optional = true }

[features]
default = ["std"]
std = [
    # Core crates
    "codec/std",
    "scale-info/std",
    "serde_json/std",
    # Polkadot SDK (automatically enables std for all included pallets and primitives)
    "polkadot-sdk/std",
    # Local custom pallets
    "pallet-task-registry/std",
    "pallet-provider-staking/std",
    "pallet-reward-distribution/std",
    # Build tools
    "substrate-wasm-builder",
]
runtime-benchmarks = [
    # Polkadot SDK (enables runtime-benchmarks for all included pallets)
    "polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
    # Polkadot SDK (enables try-runtime for all included pallets)
    "polkadot-sdk/try-runtime",
    # Local custom pallets
    "pallet-task-registry/try-runtime",
    "pallet-provider-staking/try-runtime",
    "pallet-reward-distribution/try-runtime",
]