[package]
name = "pallet-reward-distribution"
version = "0.1.0"
authors = ["GLIN Team"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
pallet-balances = { workspace = true }
pallet-task-registry = { path = "../task-registry", default-features = false }
pallet-provider-staking = { path = "../provider-staking", default-features = false }

[dev-dependencies]
sp-core = { version = "34.0.0" }
sp-runtime = { version = "39.0.1" }
pallet-balances = { version = "39.0.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "pallet-balances/std",
    "pallet-task-registry/std",
    "pallet-provider-staking/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]